5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1649_2445.log
== TEST (2019-04-15 17:26:00) 
-- CODE:
opção = input("escolha, c or f:")
temp = float(input("valor da temperatura:"))
if opção = "f":
	C = (5/9)*(temp - 32)
else:
	C = (temp * 9/5) + 32


-- ERROR:
File "XXXX", line 3
    if opção = "f":
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:26:22) 
-- CODE:
escolha = input("escolha, c or f:")
temp = float(input("valor da temperatura:"))
if escolha = "f":
	C = (5/9)*(temp - 32)
else:
	C = (temp * 9/5) + 32


-- ERROR:
File "XXXX", line 3
    if escolha = "f":
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:26:38) 
-- CODE:
escolha = input("escolha, c or f:")
temp = float(input("valor da temperatura:"))
if escolha == "f":
	C = (5/9)*(temp - 32)
else:
	C = (temp * 9/5) + 32


-- ERROR:
File "XXXX", line 3
    if escolha = "f":
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:27:58) 
-- CODE:
escolha = input("escolha, c or f:")
temp = float(input("valor da temperatura:"))
C1 = (5/9)*(temp - 32)
C2 = (temp * 9/5) + 32
if escolha == "f":
	print(C1)
else:
	print(C2)
	


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:28:17) 
-- CODE:
escolha = input("escolha, c or f:")
temp = float(input("valor da temperatura:"))
C1 = (5/9)*(temp - 32)
C2 = (temp * 9/5) + 32
if escolha == "f":
	print(C1)
else:
	print(C2)
	


-- EXECUTION TIME:
0.130035
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:29:12) 
-- CODE:
escolha = input("escolha, c or f:")
temp = float(input("valor da temperatura:"))
C1 = (5/9)*(temp - 32)
C2 = (temp * 9/5) + 32
if escolha == "c":
	print(C2)
else:
	print(C1)
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:29:14) 
-- CODE:
escolha = input("escolha, c or f:")
temp = float(input("valor da temperatura:"))
C1 = (5/9)*(temp - 32)
C2 = (temp * 9/5) + 32
if escolha == "c":
	print(C2)
else:
	print(C1)
	


-- EXECUTION TIME:
0.194323
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.77777777777778
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:30:03) 
-- CODE:
escolha = input("escolha, c or f:")
temp = float(input("valor da temperatura:"))
C1 = (5/9)*(temp - 32)
C2 = (temp * 9/5) + 32
if escolha == "c":
	print(round(C2,2)
else:
	print(round(C1,2))
	


-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:30:11) 
-- CODE:
escolha = input("escolha, c or f:")
temp = float(input("valor da temperatura:"))
C1 = (5/9)*(temp - 32)
C2 = (temp * 9/5) + 32
if escolha == "c":
	print(round(C2,2))
else:
	print(round(C1,2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:30:12) 
-- CODE:
escolha = input("escolha, c or f:")
temp = float(input("valor da temperatura:"))
C1 = (5/9)*(temp - 32)
C2 = (temp * 9/5) + 32
if escolha == "c":
	print(round(C2,2))
else:
	print(round(C1,2))
	


-- EXECUTION TIME:
0.154674
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:30:40) 
-- CODE:
escolha = input("escolha, C or F:")
temp = float(input("valor da temperatura:"))
C1 = (5/9)*(temp - 32)
C2 = (temp * 9/5) + 32
if escolha == "C":
	print(round(C2,2))
else:
	print(round(C1,2))
	


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:30:59) 
-- CODE:
escolha = input("escolha, C or F:")
temp = float(input("valor da temperatura:"))
C1 = (5/9)*(temp - 32)
C2 = (temp * 9/5) + 32
if escolha == "C":
	print(round(C2,2))
else:
	print(round(C1,2))
	


-- EXECUTION TIME:
0.141662
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
